Service OK, Notification not (check Run() in MyService)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="channel_description">Notification channel for scanner</string>
     <string name="task_switch_descr">Attivazione task</string>
     <string name="service_switch_descr">Attivazione Servizio</string>
+    <string name="channel_name">NOTIFICATION_CHANNEL</string>
 </resources>
 
